# cmd/authentication/main.go
@@ -3,12 +3,16 @@ package main
 import (
 	_ "atommuse/backend/authentication-service/cmd/authentication/doc"
 	handlers "atommuse/backend/authentication-service/handler"
+	"atommuse/backend/authentication-service/pkg/model"
 	"atommuse/backend/authentication-service/pkg/repository"
 	services "atommuse/backend/authentication-service/pkg/service"
 	"fmt"
 	"log"
+	"net/http"
 	"os"
+	"strings"
 
+	"github.com/dgrijalva/jwt-go"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 
@@ -17,10 +21,14 @@ import (
 	"github.com/joho/godotenv"
 )
 
-// @title			Authentication Service API
-// @version		v0
-// @description	Authentication Service สำหรับขอจัดการเกี่ยวกับ Authentication
-// @schemes		http
+//	@title						Authentication Service API
+//	@version					v0
+//	@description				Authentication Service สำหรับขอจัดการเกี่ยวกับ Authentication
+//	@schemes					http
+//
+//	@SecurityDefinitions.apikey	BearerAuth
+//	@In							header
+//	@Name						Authorization
 func main() {
 
 	if err := godotenv.Load(); err != nil {
@@ -48,9 +56,11 @@ func main() {
 
 	// Services
 	authService := services.NewAuthService(userRepo)
+	userService := services.NewUserService(userRepo)
 
 	// Handlers
 	authHandler := handlers.NewAuthHandler(authService)
+	userHandler := handlers.NewUserHandler(userService)
 
 	// Add CORS middleware
 	config := cors.DefaultConfig()
@@ -69,6 +79,10 @@ func main() {
 		authRoutes.POST("/login", authHandler.Login)
 		authRoutes.POST("/register", authHandler.Register)
 	}
+	apiRoutes := router.Group("/api")
+	{
+		apiRoutes.PUT("/user/:id", authMiddleware("exhibitor"), userHandler.UpdateUserByID)
+	}
 
 	// Run the server
 	port := os.Getenv("PORT")
@@ -78,5 +92,67 @@ func main() {
 	err = router.Run(":" + port)
 	if err != nil {
 		log.Fatalf("Failed to start server: %v", err)
+	}
+}
+
+// authMiddleware is middleware to validate the token and check the role
+func authMiddleware(role string) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		token := c.GetHeader("Authorization")
+		secretKey := os.Getenv("secret_key")
+		if token == "" {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Authorization token is required"})
+			c.Abort()
+			return
+		}
+
+		if !strings.HasPrefix(token, "Bearer ") {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token format"})
+			c.Abort()
+			return
+		}
+
+		token = strings.TrimPrefix(token, "Bearer ")
+
+		// Parse the token
+		claims := &model.JwtCustomClaims{}
+		parsedToken, err := jwt.ParseWithClaims(token, claims, func(token *jwt.Token) (interface{}, error) {
+			// Check the token signing method
+			if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
+				return nil, fmt.Errorf("unexpected signing method: %v", token.Header["alg"])
+			}
+			// Return the secret key for validation
+
+			fmt.Println(secretKey)
+			fmt.Println(claims)
+
+			return []byte(secretKey), nil
+		})
+		// Handle token parsing errors
+		if err != nil {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token: " + err.Error()})
+			c.Abort()
+			fmt.Println("Token parsing error:", err)
+			return
+		}
+
+		// Check if the token is valid
+		if !parsedToken.Valid {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+			c.Abort()
+			fmt.Println("Invalid token")
+			return
+		}
+
+		// Check if the role matches
+		if claims.Role != role {
+			c.JSON(http.StatusForbidden, gin.H{"error": "Insufficient permissions"})
+			c.Abort()
+			fmt.Println("Insufficient permissions")
+			return
+		}
+
+		// Continue down the chain to handler etc
+		c.Next()
 	}
 }
