# handler/auth_handler.go
@@ -18,15 +18,15 @@ func NewAuthHandler(authService services.AuthService) *AuthHandler {
 	}
 }
 
-// @Summary		Login
-// @Description	Login user
-// @Tags			Authentications
-// @ID				Login
-// @Produce		json
-// @Param			loginRequest	body	model.LoginRequest	true	"User data to login"
-// @Success		200
-// @Failure		500
-// @Router			/auth/login [post]
+//	@Summary		Login
+//	@Description	Login user
+//	@Tags			Authentications
+//	@ID				Login
+//	@Produce		json
+//	@Param			loginRequest	body	model.LoginRequest	true	"User data to login"
+//	@Success		200
+//	@Failure		500
+//	@Router			/auth/login [post]
 func (h *AuthHandler) Login(c *gin.Context) {
 	var loginRequest model.LoginRequest
 	if err := c.ShouldBindJSON(&loginRequest); err != nil {
@@ -43,15 +43,15 @@ func (h *AuthHandler) Login(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"token": token})
 }
 
-// @Summary		Register
-// @Description	Register user
-// @Tags			Authentications
-// @ID				Register
-// @Produce		json
-// @Param			registerRequest	body	model.RegisterRequest	true	"User data to create"
-// @Success		200
-// @Failure		500
-// @Router			/auth/register [post]
+//	@Summary		Register
+//	@Description	Register user
+//	@Tags			Authentications
+//	@ID				Register
+//	@Produce		json
+//	@Param			registerRequest	body	model.RegisterRequest	true	"User data to create"
+//	@Success		200
+//	@Failure		500
+//	@Router			/auth/register [post]
 func (h *AuthHandler) Register(c *gin.Context) {
 	var registerRequest model.RegisterRequest
 	if err := c.ShouldBindJSON(&registerRequest); err != nil {
