# pkg/model/auth_model.go
@@ -1,5 +1,10 @@
 package model
 
+import (
+	"github.com/dgrijalva/jwt-go"
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
+
 type LoginRequest struct {
 	Email    string `json:"email" binding:"required,email"`
 	UserName string `json:"username" bson:"username"`
@@ -16,12 +21,30 @@ type RegisterRequest struct {
 }
 
 type User struct {
-	ID           string `json:"id" bson:"_id,omitempty"`
+	ID           primitive.ObjectID `json:"id" bson:"_id,omitempty"`
+	UserName     string             `json:"username" bson:"username"`
+	FirstName    string             `json:"firstname" bson:"firstname"`
+	LastName     string             `json:"lastname" bson:"lastname"`
+	Email        string             `json:"email" bson:"email"`
+	Password     string             `json:"password" bson:"password"`
+	Role         string             `json:"role" bson:"role"`
+	ProfileImage string             `json:"profile,omitempty" bson:"profile,omitempty"`
+}
+
+type RequestUpdateUser struct {
 	UserName     string `json:"username" bson:"username"`
 	FirstName    string `json:"firstname" bson:"firstname"`
 	LastName     string `json:"lastname" bson:"lastname"`
 	Email        string `json:"email" bson:"email"`
-	Password     string `json:"password" bson:"password"`
-	Role         string `json:"role" bson:"role"`
 	ProfileImage string `json:"profile,omitempty" bson:"profile,omitempty"`
+}
+
+// jwtCustomClaims represents the custom claims of a JWT token
+type JwtCustomClaims struct {
+	Role         string `json:"role"`
+	UserName     string `json:"username" bson:"username"`
+	FirstName    string `json:"firstname" bson:"firstname"`
+	LastName     string `json:"lastname" bson:"lastname"`
+	ProfileImage string `json:"profile,omitempty" bson:"profile,omitempty"`
+	jwt.StandardClaims
 }
